--- a/src/sass/partials/_joinWrapper.scss
+++ b/src/sass/partials/_joinWrapper.scss
@@ -105,4 +105,5 @@
   font-size: 12px;
   top: 100px;
   margin-left: 300px;
+  display: block;
 }
